<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>


    <string name="menu_cast">Cast</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_showLines">Show lines</string>
    <string name="menu_hideLines">Hide lines</string>
    <string name="menu_showEmptyScenes">Show empty scenes</string>
    <string name="menu_hideEmptyScenes">Hide empty scenes</string>
    <string name="menu_goToBookmark">Go to bookmark</string>
    <string name="menu_copyCue">Copy cue</string>
    <string name="menu_editCue">Edit cue</string>
    <string name="menu_addBookmark">Add a bookmark</string>
    <string name="menu_removeBookmark">Remove bookmark</string>
    <string name="menu_note">Note…</string>
    <string name="menu_addNote">Add a note</string>
    <string name="menu_showNote">Show note</string>
    <string name="menu_editNote">Edit note</string>
    <string name="menu_removeNote">Remove note</string>
    <string name="menu_addProp">Add prop</string>
    <string name="menu_deleteProp">Delete prop</string>
    <string name="menu_props">Props…</string>
    <string name="menu_showProps">Show props</string>
    <string name="menu_scene">Scene…</string>
    <string name="menu_addDialog">Add a dialog</string>
    <string name="menu_addAction">Add an action</string>
    <string name="menu_addLyrics">Add lyrics</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_exportScript">Export script</string>

    <string name="cast_title">Cast</string>
    <string name="cast_action_hideLines">Hide lines:</string>
    <string name="cast_action_color">Color:</string>
    <string name="cast_action_voicePitch">Voice pitch:</string>
    <string name="cast_action_voiceRate">Voice speed:</string>
    <string name="cast_action_voiceEngine">Voice Engine:</string>
    <string name="cast_prompt_voiceProvider">Choose a voice provider</string>

    <string name="channel_title_voice">Voice</string>
    <string name="channel_text_voiceDescription">Scene playback voice controller</string>

    <string name="notif_title_anonymous">Rehearsal</string>
    <string name="notif_text_hiddenCue">Hidden cue</string>

    <string name="script_title_confirmDelete">Delete script?</string>
    <string name="script_text_deleteWarningPrompt">Are you sure you want to delete this script? This action can\'t be undone.</string>

    <string name="scene_prompt_bookmark">Select a bookmark</string>
    <string name="scene_prompt_deleteWarningPrompt">Are you sure you want to delete this cue? This can\'t be undone.</string>

    <string name="schedule_title_create">Create new schedule</string>
    <string name="schedule_action_dueDate">Due date:</string>

    <string name="rangePicker_title">Choose range</string>
    <string name="rangePicker_action_scene">Scene:</string>
    <string name="rangePicker_action_from">From:</string>
    <string name="rangePicker_action_to">To:</string>

    <string name="rangePicker_prompt_scene">Select a Scene</string>
    <string name="rangePicker_prompt_cue">Select a Cue</string>

    <string name="rangePicker_text_ellipsis">…</string>


    <string name="schedule_title_confirmDelete">Delete schedule?</string>
    <string name="schedule_text_deleteWarningPrompt">Are you sure you want to delete this item? This action can\'t be undone.</string>
</resources>
