<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_add_bookmark"
            android:title="@string/menu_addBookmark"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_remove_bookmark"
            android:title="@string/menu_removeBookmark"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_add_note"
            android:title="@string/menu_addNote"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_show_note"
            android:title="@string/menu_showNote"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_edit_note"
            android:title="@string/menu_editNote"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_remove_note"
            android:title="@string/menu_removeNote"
            app:showAsAction="ifRoom"/>
</menu>
