<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_schedule"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_schedule"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_cast"
            android:icon="@drawable/ic_cast"
            android:title="@string/menu_cast"
            app:showAsAction="ifRoom"/>

    <group android:id="@+id/menu_group_empty_scenes">
        <item
                android:id="@+id/action_show_empty_scenes"
                android:title="@string/menu_showEmptyScenes"/>
        <item
                android:id="@+id/action_hide_empty_scenes"
                android:title="@string/menu_hideEmptyScenes"/>
    </group>

    <item
            android:id="@+id/action_delete"
            android:title="@string/menu_delete"
            app:showAsAction="never"/>
</menu>
